--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="SprSecurity">
+    <wb-module deploy-name="SpringSecurityDB">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="context-root" value="SprSecurity"/>
-        <property name="java-output-path" value="/SprSecurity/target/classes"/>
+        <property name="java-output-path" value="/SpringSecurityDB/target/classes"/>
+        <property name="context-root" value="SpringSecurityDB"/>
     </wb-module>
 </project-modules>
